Fix links box issue on hover (overflow)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -449,4 +449,7 @@ body {
   .content {
     padding: 0.5em 1em 0.75em 1em;
   }
+  .links {
+    margin: 0 -0.3em;
+  }
 }
